--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "main": "dist/lib/index.js",
     "types": "dist/lib/index.d.ts",
     "scripts": {
+        "migrate": "dotenv -e ../.env -- kysely migrate",
         "prepare": "[ ! -f .env.local.sh ] && cp .env.sh .env.local.sh || true",
         "test": "vitest --watch=false",
         "dev": "yarn build && yarn start",
@@ -59,6 +60,7 @@
         "jwt-simple": "^0.5.6",
         "keycloak-backend": "^2.0.1",
         "keycloakify": "^9.6.7",
+        "kysely-ctl": "^0.8.4",
         "memoizee": "^0.4.15",
         "node-fetch": "^2.6.7",
         "prettier": "^2.8.2",
@@ -75,6 +77,8 @@
         "@retorquere/bibtex-parser": "^7.0.11",
         "@trpc/server": "^10.18.0",
         "jwt-decode": "^3.1.2",
+        "kysely": "^0.27.3",
+        "pg": "^8.11.5",
         "semver": "^7.5.4",
         "tsafe": "^1.6.6",
         "zod": "^3.21.4"
