--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
         "link-in-web": "ts-node --skipProject scripts/link-in-app.ts sill-web",
         "reset-data-test": "ts-node --skipProject scripts/reset-data-test.ts",
         "compile-data": "./.env.local.sh ts-node --skipProject scripts/compile-data.ts",
+        "load-git-repo-in-pg": "dotenv -e ../.env -- ts-node --skipProject scripts/load-git-repo-in-pg.ts",
         "typecheck": "tsc --noEmit"
     },
     "author": "DINUM",
@@ -60,7 +61,7 @@
         "jwt-simple": "^0.5.6",
         "keycloak-backend": "^2.0.1",
         "keycloakify": "^9.6.7",
-        "kysely-ctl": "^0.8.4",
+        "kysely-ctl": "^0.8.7",
         "memoizee": "^0.4.15",
         "node-fetch": "^2.6.7",
         "prettier": "^2.8.2",
@@ -76,6 +77,7 @@
         "@octokit/graphql": "^7.0.2",
         "@retorquere/bibtex-parser": "^7.0.11",
         "@trpc/server": "^10.18.0",
+        "@types/pg": "^8.11.6",
         "jwt-decode": "^3.1.2",
         "kysely": "^0.27.3",
         "pg": "^8.11.5",
